# HelloBazel

./: BUILD.bazel  README.md  WORKSPACE
hello/: BUILD.bazel  go.mod  hello.go  hello_test.go
